--- a/dashboard.html
+++ b/dashboard.html
@@ -556,9 +556,9 @@ iframe{width:100%;height:85vh;border:none;border-radius:16px;background:#fff}
         <a href="3 kW Ongrid.html" target="_blank">3 kW Ongrid Calculator</a>
       </div> -->
       <div class="links">
-  <a href="#" onclick="loadPage('hybridsolar')">Hybrid Solar Calculator</a>
-  <a href="#" onclick="loadPage('ongridsolar')">Ongrid Savings Calculator</a>
-  <a href="#" onclick="loadPage('3kwongrid')">3 kW Ongrid Calculator</a>
+  <a href="#" onclick="loadPage('hybridsolar', this)">Hybrid Solar Calculator</a>
+  <a href="#" onclick="loadPage('ongridsolar', this)">Ongrid Savings Calculator</a>
+  <a href="#" onclick="loadPage('3kwongrid', this)">3 kW Ongrid Calculator</a>
 </div>
 
     </article>
@@ -571,7 +571,7 @@ iframe{width:100%;height:85vh;border:none;border-radius:16px;background:#fff}
       </div>
       <p>Generate receipts and vendor agreements.</p>
       <div class="links">
-         <a href="#" onclick="loadPage('moneyreceipt')">Money Receipt Generator</a>
+         <a href="#" onclick="loadPage('moneyreceipt', this)">Money Receipt Generator</a>
           <a href="#" onclick="loadPage('vendor', this)">Vendor Agreement Generator</a>
 
       </div>
