--- a/service.html
+++ b/service.html
@@ -100,7 +100,14 @@
                   <a href="branch.html" class="nav-item nav-link">Our Branch</a>
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
             </div>
-             <a href="dashboard.html" class="btn btn-success rounded-0 py-4 px-lg-5">CRM Login<i class="fa fa-arrow-right ms-3"></i></a>
+            <a href="dashboard.html"
+   class="btn btn-primary rounded-0 py-4 px-lg-5"
+   title="Internal access for authorized staff only">
+  🔐 Staff / Admin Login
+  <i class="fa fa-arrow-right ms-3"></i>
+</a>
+
+             <!-- <a href="dashboard.html" class="btn btn-success rounded-0 py-4 px-lg-5">CRM Login<i class="fa fa-arrow-right ms-3"></i></a> -->
 
             <!-- <a href="https://mybillbook.in/store/bhakti_solar_energy" class="btn btn-primary rounded-0 py-4 px-lg-5">Get A Quote<i class="fa fa-arrow-right ms-3"></i></a>
         </div> -->
