--- a/404.html
+++ b/404.html
@@ -102,9 +102,8 @@
             </div>
             <a href="dashboard.html"
    class="btn btn-primary rounded-0 py-4 px-lg-5"
-   title="Internal access for authorized staff only">
-  🔐 Staff / Admin Login
-  <i class="fa fa-arrow-right ms-3"></i>
+   title="Internal access for authorized Staff / Admin only">
+  🔐
 </a>
 
             <!-- <a href="dashboard.html" class="btn btn-primary rounded-0 py-4 px-lg-5">CRM Login<i class="fa fa-arrow-right ms-3"></i></a> -->
