--- a/about.html
+++ b/about.html
@@ -102,8 +102,8 @@
             </div>
             <a href="dashboard.html"
    class="btn btn-primary rounded-0 py-4 px-lg-5"
-   title="Internal access for authorized staff only">
-  🔐 Staff / Admin Login
+   title="Internal access for authorized staff / admin only">
+  🔐
   <i class="fa fa-arrow-right ms-3"></i>
 </a>
 
