--- a/about.html
+++ b/about.html
@@ -101,7 +101,7 @@
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
             </div>
             <a href="dashboard.html"
-   class="btn btn-primary rounded-0 py-4 px-lg-5"
+   class="btn btn-primary rounded-0 "
    title="Internal access for authorized staff / admin only">
   🔐
 </a>
