--- a/404.html
+++ b/404.html
@@ -101,8 +101,8 @@
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
             </div>
             <a href="dashboard.html"
-   class="btn btn-primary rounded-0 py-4 px-lg-5"
-   title="Internal access for authorized Staff / Admin only">
+  class="btn btn-primary rounded-0 py-4 px-lg-1"
+   title="Internal access for authorized staff / admin only">
   🔐
 </a>
 
