--- a/service.html
+++ b/service.html
@@ -101,10 +101,9 @@
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
             </div>
             <a href="dashboard.html"
-   class="btn btn-primary rounded-0 py-4 px-lg-5"
-   title="Internal access for authorized staff only">
-  🔐 Staff / Admin Login
-  <i class="fa fa-arrow-right ms-3"></i>
+   class="btn btn-primary rounded-0 py-4 px-lg-1"
+   title="Internal access for authorized staff / admin only">
+  🔐
 </a>
 
              <!-- <a href="dashboard.html" class="btn btn-success rounded-0 py-4 px-lg-5">CRM Login<i class="fa fa-arrow-right ms-3"></i></a> -->
