--- a/dashboard.html
+++ b/dashboard.html
@@ -525,8 +525,11 @@ iframe{width:100%;height:85vh;border:none;border-radius:16px;background:#fff}
     
 
 <article class="card" data-category="dashboard reports">
+  <div class="card-header">
   <h3>📊 Reports</h3>
   <button class="fav-btn" title="Pin"> ⭐</button>
+  <span class="tag">Report</span>
+  </div>
   <p>Analytics & exports.</p>
 </article>
 
