--- a/dashboard.html
+++ b/dashboard.html
@@ -456,7 +456,7 @@ iframe{width:100%;height:85vh;border:none;border-radius:16px;background:#fff}
 <section class="stats">
   <div class="stat-card">
     <h3>👥 Users</h3>
-    <p id="statUsers">—</p>
+    <p id="statUsers">0</p>
   </div>
 
   <div class="stat-card">
@@ -694,7 +694,7 @@ function updateStats() {
 
 updateStats();
 </script>
-<script>
+<!-- <script>
 function animateCount(el, value) {
   let start = 0;
   const speed = 20;
@@ -713,7 +713,7 @@ animateCount(statLinks, parseInt(statLinks.innerText));
 // example placeholder
 document.getElementById("statUsers").innerText = "Admin + Staff";
 
-</script>
+</script> -->
 
 <script>
 document.querySelectorAll(".card").forEach(card => {
