--- a/_receipt.html
+++ b/_receipt.html
@@ -233,7 +233,7 @@ installation of <span class="out_plant"></span> on grid solar system.</p>
 
   <div class="sign">
     <div>
-     Operation Executive, Pratap Ku. Das
+  PragatiEcosolar Authority
     </div>
     <div>
       Customer Signature
