--- a/branch.html
+++ b/branch.html
@@ -31,6 +31,61 @@
 
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
+
+    <style>
+/* Section Styling */
+.branches-section {
+    background: linear-gradient(135deg, #f8fbff, #eef5ff);
+    padding: 80px 0;
+}
+
+/* Card Styling */
+.branch-card {
+    border: none;
+    border-radius: 18px;
+    overflow: hidden;
+    transition: all 0.4s ease;
+    background: #ffffff;
+}
+
+.branch-card:hover {
+    transform: translateY(-10px);
+    box-shadow: 0 20px 40px rgba(0,0,0,0.12);
+}
+
+/* Title */
+.branch-title {
+    font-weight: 600;
+    font-size: 18px;
+    margin-bottom: 15px;
+}
+
+/* Map responsive container */
+.map-container {
+    position: relative;
+    width: 100%;
+    padding-bottom: 75%;
+    border-radius: 12px;
+    overflow: hidden;
+}
+
+.map-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
+}
+
+/* Responsive improvements */
+@media (max-width: 768px) {
+    .branch-card {
+        margin-bottom: 20px;
+    }
+}
+</style>
+
 </head>
 
 <body>
